[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sean P. Madden <sean@seanmadden.net>"]
homepage = "https://github.com/spmadden/irox"
license = "MIT OR Apache-2.0"
exclude = ["doc"]
readme = "README.md"
repository = "https://github.com/spmadden/irox"

[workspace]
resolver = "2"
members = [
    "irox",
    "data-formats/csv",
    "data-formats/gpx",
    "data-formats/nmea0183",
    "data-formats/raymarine-sonar",
    "data-formats/sirf",
    "eieio/api",
    "eieio/nmea0183",
    "interfaces/influxdb_v1",
    "interfaces/win-location-api",
    "libraries/carto",
    "libraries/egui_extras",
    "libraries/enums",
    "libraries/enums_derive",
    "libraries/log",
    "libraries/network",
    "libraries/progress",
    "libraries/stats",
    "libraries/units",
    "libraries/structs",
    "libraries/structs_derive",
    "libraries/time",
    "libraries/threading",
    "libraries/tools",
    "libraries/types",
    "tools/cargo-describe",
    "tools/gpsd",
    "tools/halflifes",
    "tools/influx-cli",
    "tools/sonar-sdf-convert",
]

[workspace.dependencies]
egui = { version = "^0.24", default-features = false }
eframe = { version = "^0.24", default-features = false }
egui_plot = { version = "^0.24", features = [], default-features = false }
ron = { version = "^0.8", features = ["integer128"] }
serde = { version = "^1.0.193", features = ["derive"] }
serde_json = {version = "^1.0", features = []}
ureq = {version = "^2.9", features = ["brotli", "native-certs", "socks-proxy", "cookies"]}
url = {version = "^2.5", features = []}
clap = {version = "^4.4", features = ["derive", "wrap_help", "string", "cargo", "env"]}
clap-verbosity-flag = {version = "^2.1"}
log = {version = "^0.4", features = []}
env_logger = {version = "^0.10", features = []}
syn = {version = "^2.0", features = ["extra-traits"]}
quote = {version = "^1.0", features = []}
signal-hook = {version = "^0.3", features = []}
windows = {version = "^0.52", features = [ "Devices_Geolocation", "Foundation" ]}
rusqlite = {version = "^0.30", features = ["bundled", "bundled-windows"]}
miniz_oxide = {version = "^0.7", features = []}
xml = {version = "^0.8", features = []}
serial = {version = "^0.4", features = []}
human-panic = {version = "^1.2", features = []}
proc-macro2 = {version = "^1.0", features = []}
num_cpus = {version = "1.16.0", features = []}
git2 = {version = "0.18.1", features = ["vendored-openssl", "vendored-libgit2"]}
cargo = {version = "0.75.1", features = ["all-static", "vendored-openssl", "vendored-libgit2"]}

irox-csv = {version = "^0", path = "data-formats/csv"}
irox-gpx = {version = "^0", path = "data-formats/gpx"}
irox-nmea0183 = {version = "^0", path = "data-formats/nmea0183"}
irox-raymarine-sonar = {version = "^0", path = "data-formats/raymarine-sonar"}
irox-sirf = {version = "^0", path = "data-formats/sirf"}

irox-eieio-api = {version="^0", path = "eieio/api"}
irox-eieio-nmea0183 = {version="^0", path = "eieio/nmea0183"}

irox-influxdb_v1 = {version = "^0", path = "interfaces/influxdb_v1"}
irox-winlocation-api = {version = "^0", path = "interfaces/win-location-api"}

irox-carto = {version = "^0", path = "libraries/carto"}
irox-egui-extras = {version = "^0", path = "libraries/egui_extras"}
irox-enums = {version = "^0", path = "libraries/enums"}
irox-enums_derive = {version = "^0", path = "libraries/enums_derive"}
irox-log = {version = "^0", path = "libraries/log"}
irox-networking = {version = "^0", path = "libraries/network"}
irox-progress = {version = "^0", path = "libraries/progress"}
irox-stats = {version = "^0", path = "libraries/stats"}
irox-structs = {version = "^0", path = "libraries/structs"}
irox-structs_derive = {version = "^0", path = "libraries/structs_derive"}
irox-threading = {version = "^0", path = "libraries/threading"}
irox-time = {version = "^0", path = "libraries/time"}
irox-tools = {version = "^0", path = "libraries/tools"}
irox-types = {version = "^0", path = "libraries/types"}
irox-units = {version = "^0", path = "libraries/units"}

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "allow"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"

[workspace.lints.clippy]
cargo_common_metadata = "deny"
case_sensitive_file_extension_comparisons = "deny"
create_dir = "deny"
dbg_macro = "deny"
doc_link_with_quotes = "deny"
empty_enum = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
exit = "deny"
expect_used = "deny"
expl_impl_clone_on_copy = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
float_cmp = "deny"
fn_params_excessive_bools = "deny"
format_push_string = "deny"
from_iter_instead_of_collect = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
ignored_unit_patterns = "deny"
impl_trait_in_params = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
inefficient_to_string = "deny"
iter_not_returning_iterator = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
linkedlist = "deny"
lossy_float_literal = "deny"
manual_assert = "deny"
manual_instant_elapsed = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
manual_string_new = "deny"
match_on_vec_items = "deny"
match_same_arms = "deny"
match_wild_err_arm = "deny"
mem_forget = "deny"
mismatching_type_param_order = "deny"
missing_assert_message = "deny"
missing_enforced_import_renames = "deny"
missing_panics_doc = "deny"
mixed_read_write_in_expression = "deny"
mut_mut = "deny"
mutex_atomic = "deny"
needless_for_each = "deny"
needless_pass_by_value = "deny"
no_mangle_with_rust_abi = "deny"
non_ascii_literal = "deny"
option_option = "deny"
panic = "deny"
panic_in_result_fn = "deny"
print_stderr = "deny"
print_stdout = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
redundant_feature_names = "deny"
ref_option_ref = "deny"
return_self_not_must_use = "deny"
same_functions_in_if_condition = "deny"
semicolon_if_nothing_returned = "deny"
tests_outside_test_module = "deny"
trivially_copy_pass_by_ref = "deny"
unchecked_duration_subtraction = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unnecessary_box_returns = "deny"
unnecessary_join = "deny"
unnecessary_wraps = "deny"
unreachable = "deny"
unused_async = "deny"
unused_self = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"
wildcard_dependencies = "deny"
zero_sized_map_values = "deny"
missing_errors_doc = "allow"
module-name-repetitions = "allow"
semicolon-if-nothing-returned = "allow"
