[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sean P. Madden <sean@seanmadden.net>"]
homepage = "https://github.com/spmadden/irox"
license = "MIT OR Apache-2.0"
exclude = ["doc"]
readme = "README.md"
repository = "https://github.com/spmadden/irox"

[workspace]
resolver = "2"
members = [
    "irox",
    "data-formats/csv",
    "data-formats/gpx",
    "data-formats/nmea0183",
    "data-formats/raymarine-sonar",
    "data-formats/sirf",
    "eieio/api",
    "eieio/nmea0183",
    "interfaces/influxdb_v1",
    "interfaces/win-location-api",
    "libraries/build-rs",
    "libraries/carto",
    "libraries/egui_extras",
    "libraries/enums",
    "libraries/enums_derive",
    "libraries/git-tools",
    "libraries/log",
    "libraries/network",
    "libraries/progress",
    "libraries/stats",
    "libraries/units",
    "libraries/structs",
    "libraries/structs_derive",
    "libraries/time",
    "libraries/threading",
    "libraries/tools",
    "libraries/types",
    "tools/cargo-describe",
    "tools/gpsd",
    "tools/halflifes",
    "tools/influx-cli",
    "tools/sonar-sdf-convert",
]

[workspace.dependencies]
egui = { version = "^0.24", default-features = false }
eframe = { version = "^0.24", default-features = false }
egui_plot = { version = "^0.24", features = [], default-features = false }
ron = { version = "^0.8", features = ["integer128"] }
serde = { version = "^1.0.193", features = ["derive"] }
serde_json = {version = "^1.0", features = []}
ureq = {version = "^2.9", features = ["brotli", "native-certs", "socks-proxy", "cookies"]}
url = {version = "^2.5", features = []}
clap = {version = "^4.4", features = ["derive", "wrap_help", "string", "cargo", "env"]}
clap-verbosity-flag = {version = "^2.1"}
log = {version = "^0.4", features = []}
env_logger = {version = "^0.10", features = []}
syn = {version = "^2.0", features = ["extra-traits"]}
quote = {version = "^1.0", features = []}
signal-hook = {version = "^0.3", features = []}
windows = {version = "^0.52", features = [ "Devices_Geolocation", "Foundation" ]}
rusqlite = {version = "^0.30", features = ["bundled", "bundled-windows"]}
miniz_oxide = {version = "^0.7", features = []}
xml = {version = "^0.8", features = []}
serial = {version = "^0.4", features = []}
human-panic = {version = "^1.2", features = []}
proc-macro2 = {version = "^1.0", features = []}
num_cpus = {version = "1.16.0", features = []}
git2 = {version = "0.18.1", features = ["vendored-openssl", "vendored-libgit2"]}
cargo = {version = "0.75.1", features = ["all-static", "vendored-openssl", "vendored-libgit2"]}

irox-csv = {version = "^0", path = "data-formats/csv"}
irox-gpx = {version = "^0", path = "data-formats/gpx"}
irox-nmea0183 = {version = "^0", path = "data-formats/nmea0183"}
irox-raymarine-sonar = {version = "^0", path = "data-formats/raymarine-sonar"}
irox-sirf = {version = "^0", path = "data-formats/sirf"}

irox-eieio-api = {version="^0", path = "eieio/api"}
irox-eieio-nmea0183 = {version="^0", path = "eieio/nmea0183"}

irox-influxdb_v1 = {version = "^0", path = "interfaces/influxdb_v1"}
irox-winlocation-api = {version = "^0", path = "interfaces/win-location-api"}

irox-carto = {version = "^0", path = "libraries/carto"}
irox-egui-extras = {version = "^0", path = "libraries/egui_extras"}
irox-enums = {version = "^0", path = "libraries/enums"}
irox-enums_derive = {version = "^0", path = "libraries/enums_derive"}
irox-git-tools = {version = "^0", path = "libraries/git-tools"}
irox-log = {version = "^0", path = "libraries/log"}
irox-networking = {version = "^0", path = "libraries/network"}
irox-progress = {version = "^0", path = "libraries/progress"}
irox-stats = {version = "^0", path = "libraries/stats"}
irox-structs = {version = "^0", path = "libraries/structs"}
irox-structs_derive = {version = "^0", path = "libraries/structs_derive"}
irox-threading = {version = "^0", path = "libraries/threading"}
irox-time = {version = "^0", path = "libraries/time"}
irox-tools = {version = "^0", path = "libraries/tools"}
irox-types = {version = "^0", path = "libraries/types"}
irox-units = {version = "^0", path = "libraries/units"}

# Lints last updated for Rust 1.74.0
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "allow"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"
redundant_explicit_links = "warn"

[workspace.lints.clippy]
cargo_common_metadata = "warn"
case_sensitive_file_extension_comparisons = "warn"
create_dir = "warn"
dbg_macro = "warn"
doc_link_with_quotes = "warn"
empty_enum = "warn"
empty_structs_with_brackets = "warn"
enum_glob_use = "warn"
exit = "warn"
expect_used = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
fn_params_excessive_bools = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "warn"
impl_trait_in_params = "warn"
implicit_clone = "warn"
implicit_hasher = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
inefficient_to_string = "warn"
iter_not_returning_iterator = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_assert_message = "warn"
missing_enforced_import_renames = "warn"
missing_panics_doc = "warn"
mixed_read_write_in_expression = "warn"
mut_mut = "warn"
mutex_atomic = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
no_mangle_with_rust_abi = "warn"
non_ascii_literal = "warn"
option_option = "warn"
panic = "warn"
panic_in_result_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
tests_outside_test_module = "warn"
trivially_copy_pass_by_ref = "warn"
unchecked_duration_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_wraps = "warn"
unreachable = "warn"
unused_async = "warn"
unused_self = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
zero_sized_map_values = "warn"
missing_errors_doc = "allow"
module-name-repetitions = "allow"
semicolon-if-nothing-returned = "allow"
