[package]
name = "wireguard-peer-exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stun_codec = "0.2"
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"]}
boringtun = { version="0.5.2", features= []}
poly1305 = {version="0.8.0"}
chacha20poly1305 = {version ="0.10.0-pre.1"}
x25519-dalek = {version = "2.0.0-pre.1", features = ["reusable_secrets"]}
ed25519-dalek = { version = "^1", features= []}
rand_core = "^0.6"

