[package]
name = "irox-gpsd-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irox-tools = {version = "*", path = "../../irox-tools"}
irox-units = {version = "*", path = "../../irox-units"}
irox-carto = {version = "*", path = "../../irox-carto"}
serde = {workspace = true}
serde_json = {workspace = true}
time = {workspace = true}
log = {workspace = true}
tokio = {workspace = true}