[package]
name = "irox"
description = "irox Rust Tools & Libraries"
keywords = ["irox"]
categories = ["aerospace", "science", "mathematics"]
version = "0.6.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
bits = ["dep:irox-bits"]
csv = ["dep:irox-csv"]
gpx = ["dep:irox-gpx"]
nmea0183 = ["dep:irox-nmea0183"]
raymarine-sonar = ["dep:irox-raymarine-sonar"]
sirf = ["dep:irox-sirf"]
influxdb_v1 = ["dep:irox-influxdb_v1"]
win-loc-api = ["dep:irox-winlocation-api"]
build-rs = ["dep:irox-build-rs"]
carto = ["dep:irox-carto"]
egui-extras = ["dep:irox-egui-extras"]
enums = ["dep:irox-enums"]
enums_derive = ["dep:irox-enums_derive"]
git-tools = ["dep:irox-git-tools"]
log = ["dep:irox-log"]
networking = ["dep:irox-networking"]
progress = ["dep:irox-progress"]
stats = ["dep:irox-stats"]
structs = ["dep:irox-structs"]
structs_derive = ["dep:irox-structs_derive"]
threading = ["dep:irox-threading"]
time = ["dep:irox-time"]
tools = ["dep:irox-tools"]
types = ["dep:irox-types"]
units = ["dep:irox-units"]

[dependencies]
irox-csv = { version = "^0.5.0", optional = true, path = "../data-formats/csv" }
irox-gpx = { version = "^0.5.0", optional = true, path = "../data-formats/gpx" }
irox-nmea0183 = { version = "^0.5.0", optional = true, path = "../data-formats/nmea0183" }
irox-raymarine-sonar = { version = "^0.5.0", optional = true, path = "../data-formats/raymarine-sonar" }
irox-sirf = { version = "^0.4.0", optional = true, path = "../data-formats/sirf" }

irox-influxdb_v1 = { version = "^0.6.0", optional = true, path = "../interfaces/influxdb_v1" }
irox-winlocation-api = { version = "^0.5.0", optional = true, path = "../interfaces/win-location-api" }

irox-bits = {version = "^0.1.0", optional = true, path = "../libraries/bits"}
irox-build-rs = { version = "^0.2.0", optional = true, path = "../libraries/build-rs"}
irox-carto = { version = "^0.6.0", optional = true, path = "../libraries/carto" }
irox-egui-extras = { version = "^0.3.6", optional = true, path = "../libraries/egui_extras" }
irox-enums = { version = "^0.2.1", optional = true, path = "../libraries/enums" }
irox-enums_derive = { version = "^0.2.1", optional = true, path = "../libraries/enums_derive" }
irox-git-tools = { version = "^0.2.0", optional = true, path = "../libraries/git-tools" }
irox-log = { version = "^0.2.0", optional = true, path = "../libraries/log" }
irox-networking = { version = "^0.4.1", optional = true, path = "../libraries/network" }
irox-progress = { version = "^0.3.0", optional = true, path = "../libraries/progress" }
irox-stats = { version = "^0.2.2", optional = true, path = "../libraries/stats" }
irox-structs = { version = "^0.5.0", optional = true, path = "../libraries/structs" }
irox-structs_derive = { version = "^0.3.0", optional = true, path = "../libraries/structs_derive" }
irox-threading = { version = "^0.2.2", optional = true, path = "../libraries/threading" }
irox-time = { version = "^0.4.1", optional = true, path = "../libraries/time" }
irox-tools = { version = "^0.7.0", optional = true, path = "../libraries/tools" }
irox-types = { version = "^0.4.0", optional = true, path = "../libraries/types" }
irox-units = { version = "^0.3.4", optional = true, path = "../libraries/units" }
