[package]
name = "irox"
description = "irox Rust Tools & Libraries"
keywords = ["irox"]
categories = ["aerospace", "science", "mathematics"]
version = "0.8.4"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
bits = ["dep:irox-bits", "irox-types?/bits"]
csv = ["dep:irox-csv"]
dot = ["dep:irox-dot"]
gpx = ["dep:irox-gpx"]
nmea0183 = ["dep:irox-nmea0183"]
raymarine-sonar = ["dep:irox-raymarine-sonar"]
sirf = ["dep:irox-sirf"]

influxdb_v1 = ["dep:irox-influxdb_v1"]
win-loc-api = ["dep:irox-winlocation-api"]

build = ["dep:irox-build-rs"]
carto = ["dep:irox-carto"]
derive-helpers = ["dep:irox-derive-helpers"]
egui-extras = ["dep:irox-egui-extras"]
enums = ["dep:irox-enums"]
enums_derive = ["dep:irox-enums_derive"]
fixedmath = ["dep:irox-fixedmath"]
git-tools = ["dep:irox-git-tools"]
imagery = ["dep:irox-imagery"]
log = ["dep:irox-log"]
networking = ["dep:irox-networking"]
progress = ["dep:irox-progress"]
stats = ["dep:irox-stats"]
structs = ["dep:irox-structs"]
structs_derive = ["dep:irox-structs_derive"]
threading = ["dep:irox-threading"]
time = ["dep:irox-time"]
tools = ["dep:irox-tools"]
types = ["dep:irox-types"]
units = ["dep:irox-units"]

std = ["irox-bits?/std", "irox-carto?/std", "irox-imagery?/std", "irox-networking?/std", "irox-stats?/std", "irox-time?/std", "irox-tools?/std", "irox-units?/std"]
alloc = ["irox-bits?/alloc", "irox-structs?/alloc", "irox-tools?/alloc", "irox-units?/alloc"]
egui = ["irox-egui-extras?/plots"]
emath = ["irox-stats?/emath"]
git = ["irox-build-rs?/git"]
miniz = ["irox-stats?/miniz"]
num_cpus = ["irox-threading?/num_cpus"]
plots = ["irox-egui-extras?/plots"]
profiling = ["irox-egui-extras?/profiling"]
serde = ["irox-egui-extras?/serde", "irox-networking?/serde"]
syn = ["irox-types?/syn"]


[dependencies]
irox-csv = { version = "^0.5.1", optional = true, path = "../data-formats/csv" }
irox-dot = { version = "^0.1.0", optional = true, path = "../data-formats/dot" }
irox-gpx = { version = "^0.5.0", optional = true, path = "../data-formats/gpx" }
irox-nmea0183 = { version = "^0.5.5", optional = true, path = "../data-formats/nmea0183" }
irox-raymarine-sonar = { version = "^0.6.0", optional = true, path = "../data-formats/raymarine-sonar" }
irox-sirf = { version = "^0.4.1", optional = true, path = "../data-formats/sirf" }

irox-influxdb_v1 = { version = "^0.6.0", optional = true, path = "../interfaces/influxdb_v1" }
irox-winlocation-api = { version = "^0.5.3", optional = true, path = "../interfaces/win-location-api" }

irox-bits = { version = "^0.4.2", optional = true, path = "../libraries/bits" }
irox-build-rs = { version = "^0.2.4", optional = true, path = "../libraries/build-rs" }
irox-carto = { version = "^0.6.5", optional = true, path = "../libraries/carto" }
irox-derive-helpers = { version = "^0.1.0", optional = true, path = "../libraries/derive-helpers" }
irox-egui-extras = { version = "^0.6.2", optional = true, path = "../libraries/egui_extras" }
irox-enums = { version = "^0.2.2", optional = true, path = "../libraries/enums" }
irox-enums_derive = { version = "^0.2.2", optional = true, path = "../libraries/enums_derive" }
irox-fixedmath = { version = "^0.1.2", optional = true, path = "../libraries/fixedmath" }
irox-git-tools = { version = "^0.2.1", optional = true, path = "../libraries/git-tools" }
irox-imagery = { version = "^0.1.3", optional = true, path = "../libraries/imagery" }
irox-log = { version = "^0.2.3", optional = true, path = "../libraries/log" }
irox-networking = { version = "^0.4.7", optional = true, path = "../libraries/network" }
irox-progress = { version = "^0.5.0", optional = true, path = "../libraries/progress" }
irox-stats = { version = "^0.3.5", optional = true, path = "../libraries/stats" }
irox-structs = { version = "^0.5.1", optional = true, path = "../libraries/structs" }
irox-structs_derive = { version = "^0.4.0", optional = true, path = "../libraries/structs_derive" }
irox-threading = { version = "^0.2.6", optional = true, path = "../libraries/threading" }
irox-time = { version = "^0.4.9", optional = true, path = "../libraries/time" }
irox-tools = { version = "^0.10.3", optional = true, path = "../libraries/tools" }
irox-types = { version = "^0.5.2", optional = true, path = "../libraries/types" }
irox-units = { version = "^0.4.7", optional = true, path = "../libraries/units" }
