[package]
name = "irox-csv"
description = "CSV Reader/Writer"
keywords = ["csv", "encoder", "decoder"]
categories = ["encoding", "parser-implementations"]
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true