[package]
name = "irox-csv"
description = "CSV Reader/Writer"
keywords = ["irox", "csv", "encoder", "decoder"]
categories = ["encoding", "parser-implementations"]
version= "0.5.1"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme = "README.md"
repository.workspace = true

[lints]
workspace = true

[dependencies]
irox-tools = {workspace = true, features = ["std"]}
