[package]
name = "irox-dot"
description = "DOT Graph Description Language writer, compatible with GraphViz"
keywords = ["irox"]
categories = ["encoding", "rendering::data-formats", "mathematics", "science"]
version= "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
drawing = ["dep:serde", "dep:serde_json"]
egui = ["drawing", "dep:irox-egui-extras", "dep:irox-log"]

[dependencies]
irox-bits = {workspace = true, features = ["std"]}
irox-tools = {workspace = true}
irox-log = {workspace = true, optional = true}
irox-egui-extras = {workspace = true, optional = true, features = ["eframe"]}
serde = {workspace = true, optional = true, features = ['derive', 'alloc']}
serde_json = {workspace = true, optional = true}
