[package]
name = "irox-gpx"
description = "GPX format Encoders and Decoders for GPS Devices"
keywords = ["irox", "gpx", "encoder", "decoder", "gps"]
categories = ["aerospace", "parser-implementations", "science::geo", "encoding"]
version= "0.2.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
xml.workspace = true
log.workspace = true
irox-time.workspace = true
irox-units.workspace = true
irox-carto.workspace = true
irox-tools.workspace = true
